--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "openzeppelin-solidity": "^2.3.0"
   }
 }
