--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@maticnetwork/maticjs": "^3.2.4",
+    "@maticnetwork/maticjs-web3": "^1.0.1",
     "@openzeppelin/contracts": "^4.5.0",
+    "@truffle/hdwallet-provider": "^2.0.4",
     "openzeppelin-solidity": "^2.3.0"
   }
 }
