--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.2.0",
-    "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.7",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
-    "solidity-coverage": "^0.7.19",
     "ts-node": "^10.5.0",
     "typechain": "^5.2.0",
     "typescript": "^4.5.5"
@@ -37,10 +35,12 @@
     "@maticnetwork/maticjs-web3": "^1.0.1",
     "@openzeppelin/contracts": "^4.5.0",
     "@truffle/hdwallet-provider": "^2.0.4",
-    "openzeppelin-solidity": "^2.3.0"
+    "ethereum-waffle": "^4.0.10",
+    "openzeppelin-solidity": "2.3.0",
+    "solidity-coverage": "^0.8.2"
   },
   "scripts": {
     "compile": "npx hardhat compile",
-    "test-ccip": "npx hardhat test test/CGTCCIP.test.ts --network sepolia"
+    "test-ccip": "npx hardhat test test/CGTCCIP.test.ts"
   }
 }
